--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<style>
 
 	body{
-		background-image: url("black_forest.jpg");
+		background-image: url("https://webassets2.tomtom.com/94612.jpg");
 		background-color: slategray;
 
 		font-family: optima, arial, helvetica, sans-serif;
@@ -50,7 +50,7 @@
 
 <p style="text-align: center"><h1>Greetings, subjects.</h1></p>
 
-<p style="text-align: center"><img src="konrad_selfie.jpg" width="320" height="306"></p>
+<p style="text-align: center"><img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/14358795_322200184796280_6579536230552557612_n.jpg?oh=91b558f1fcb460c79e95317c846b0c8d&oe=5B03341B" width="320" height="306"></p>
 
 
 
