--- a/konrad_about_me.html
+++ b/konrad_about_me.html
@@ -7,7 +7,7 @@
 
 	body{
 		background-color: slategray; 
-		background-image: url("black_forest.jpg");
+		background-image: url(https://webassets2.tomtom.com/94612.jpg);
 		font-family: optima, arial, helvetica, sans-serif;
 		color: white;
 	}
@@ -29,7 +29,7 @@
 </head>
 <nav>
 	<ul>
-		<li><a href="Konrad.html">Home</a></li>
+		<li><a href="index.html">Home</a></li>
 		<li><strong>About Me</strong></li>
 		<li><a href="konrad_children.html">My Beautiful Children</a></li>
 		<li><a href="konrad_origins2.html">Where I'm From</a></li>
