--- a/konrad_children.html
+++ b/konrad_children.html
@@ -5,7 +5,7 @@
 
 	body{
 		background-color: slategray; 
-		background-image: url("black_forest.jpg");
+		background-image: url("https://webassets2.tomtom.com/94612.jpg");
 		font-family: optima, arial, helvetica, sans-serif;
 		color: white;
 	}
@@ -36,7 +36,7 @@
 </head>
 <nav>
    <ul>
-       <li><a href="Konrad.html">Home</a></li>
+       <li><a href="index.html">Home</a></li>
        <li><a href="konrad_about_me.html">About Me</a></li>
        <li><strong>My Beautiful Children</strong></li>
        <li><a href="konrad_origins2.html">Where I'm From</a></li>
