--- a/konrad_origins2.html
+++ b/konrad_origins2.html
@@ -9,7 +9,7 @@
 
         body{
             background-color: slategray;
-            background-image: url("black_forest.jpg");
+            background-image: url("https://webassets2.tomtom.com/94612.jpg");
             font-family: optima, arial, helvetica, sans-serif;
             color: white;
         }
@@ -39,7 +39,7 @@
 
 <nav>
     <ul>
-        <li><a href="Konrad.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="konrad_about_me.html">About Me</a></li>
         <li><a href="konrad_children.html">My Beautiful Children</a></li>
         <li><strong>Where I'm From</strong></li>
