--- a/wesleyswebsite.html
+++ b/wesleyswebsite.html
@@ -9,7 +9,7 @@
         background-image: url("https://i.ytimg.com/vi/9t4dPUKbqd8/hqdefault.jpg");
 		background-color: purple;
 
-        color: white;
+        color: red;
     }
 	 h1{
         text-align: center;
