--- a/wesleyswebsite.html
+++ b/wesleyswebsite.html
@@ -9,11 +9,11 @@
         background-image: url("https://i.ytimg.com/vi/9t4dPUKbqd8/hqdefault.jpg");
 		background-color: purple;
 
-        color: red;
+        color: red;   
+	text-align: center;
     }
-	 h1{
-        text-align: center;
-    }
+	  
+   
 
     </style>
 
@@ -24,8 +24,8 @@
 <body>
 
 <h1>Wesley's Awesome Webpage</h1>
-
+<h2>Minecraft is cool</h2>
 <p style="text-align: center"><img src="https://i.imgur.com/jfPfj.png" width="50%" height="50%"></p>
-
+<p style="text-align: center"><img src="https://images2.storyjumper.com/transcoder.png?trim&id=1z-1dzlp25ad-5799jovpx&maxw=256&maxh=256"></p>
 </body>
 </html>
