--- a/wesleyswebsite.html
+++ b/wesleyswebsite.html
@@ -26,10 +26,13 @@
 <h1>Wesley's Awesome Webpage</h1>
 <h2>Minecraft is cool</h2>
 <p style="text-align: center"><img src="https://i.imgur.com/jfPfj.png" width="50%" height="50%"></p>
-<p style="text-align: center"><img src="https://images2.storyjumper.com/transcoder.png?trim&id=1z-1dzlp25ad-5799jovpx&maxw=256&maxh=256"></p>
 
 <h3>About Me</h3>
 	
-<p> My name is Wesley and I love Minecraft! I like to build castles and ride dragons! Creepers better watch out!</p>
+<p><strong>My name is Wesley and I love Minecraft! I like to build castles and ride dragons! Creepers better watch out!</strong></p>
+	
+<p style="text-align: center"><img src="https://images2.storyjumper.com/transcoder.png?trim&id=1z-1dzlp25ad-5799jovpx&maxw=256&maxh=256"></p>
+
+	
 </body>
 </html>
