--- a/wesleyswebsite.html
+++ b/wesleyswebsite.html
@@ -7,7 +7,10 @@
     body{
 
         background-image: url("https://i.ytimg.com/vi/9t4dPUKbqd8/hqdefault.jpg");
-		background-color: purple;
+	background-repeat: no-repeat, repeat;
+	background-attachment: fixed;
+	background-position: center;
+	background-color: purple;
 
         color: red;   
 	text-align: center;
