--- a/wesleyswebsite.html
+++ b/wesleyswebsite.html
@@ -10,7 +10,9 @@
 	background-repeat: no-repeat, repeat;
 	background-attachment: fixed;
 	background-position: center;
-	background-color: purple;
+	background-color: black;
+	height: 200%;
+	width: 200%;
 
         color: red;   
 	text-align: center;
