--- a/wesleyswebsite.html
+++ b/wesleyswebsite.html
@@ -6,13 +6,13 @@
 
     body{
 
-        background-image: url("https://i.ytimg.com/vi/9t4dPUKbqd8/hqdefault.jpg");
+        background-image: url("https://i.ytimg.com/vi/9t4dPUKbqd8/hqdefault.jpg") height="200%" width="200%";
 	background-repeat: no-repeat, repeat;
 	background-attachment: fixed;
 	background-position: center;
 	background-color: black;
-	height: 200%;
-	width: 200%;
+	height: 100%;
+	width: 100%;
 
         color: red;   
 	text-align: center;
