--- a/wesleyswebsite.html
+++ b/wesleyswebsite.html
@@ -6,7 +6,7 @@
 
     body{
 
-        background-image: url("https://i.ytimg.com/vi/9t4dPUKbqd8/hqdefault.jpg") height="200%" width="200%";
+        background-image: url("https://i.ytimg.com/vi/9t4dPUKbqd8/hqdefault.jpg");
 	background-repeat: no-repeat, repeat;
 	background-attachment: fixed;
 	background-position: center;
